--- a/micapp/pages/home/index.wxml
+++ b/micapp/pages/home/index.wxml
@@ -6,24 +6,14 @@
       <view class="panel_header_title">常用就诊人</view>
     </view>
     <view class="user_list_body">
-      <view class="user_list_body_item">
+      <view class="user_list_body_item" wx:for="{{patientList}}" wx:key="id">
         <view class="user_list_body_item_header">
-          <van-image width="24px" height="24px" fit="contain" src="/images/nanren.png" />
+          <van-image width="24px" height="24px" fit="contain" src="{{item.gender === 1 ? '/images/nanren.png' : '/images/nvren.png'}}" />
         </view>
-        <view class="user_list_body_item_name">张三</view>
-        <view class="user_list_body_item_relation">本人</view>
-        <view class="user_list_body_item_icon man">
-          <van-image width="20px" height="20px" fit="contain" src="/images/nanrenicon.svg" />
-        </view>
-      </view>
-      <view class="user_list_body_item">
-        <view class="user_list_body_item_header">
-          <van-image width="24px" height="24px" fit="contain" src="/images/nvren.png" />
-        </view>
-        <view class="user_list_body_item_name">张三</view>
-        <view class="user_list_body_item_relation">本人</view>
-        <view class="user_list_body_item_icon women">
-          <van-image width="20px" height="20px" fit="contain" src="/images/nvrenicon.svg" />
+        <view class="user_list_body_item_name">{{item.name}}</view>
+        <view class="user_list_body_item_relation">{{item.relation}}</view>
+        <view class="user_list_body_item_icon {{item.gender === 1 ? 'man' : 'women'}}">
+          <van-image width="20px" height="20px" fit="contain" src="{{item.gender === 1 ? '/images/nanrenicon.svg' : '/images/nvrenicon.svg'}}" />
         </view>
       </view>
       <view class="user_list_body_item add_btn" bindtap="gotoAddPatient">
