--- a/micapp/pages/report/index.scss
+++ b/micapp/pages/report/index.scss
@@ -12,8 +12,6 @@
       color: #116BB4;
       flex: 1;
     }
-
-    &_status {}
   }
 
   &_doctor {
@@ -47,6 +45,12 @@
 
       &_link {
         color: #116BB4;
+      }
+
+      &_num{
+        color: #116BB4;
+        font-size: 26px;
+        font-weight: bold;
       }
     }
   }
@@ -92,5 +96,10 @@
       flex-direction: column;
       border-bottom: 1px solid #ebedf0;
     }
+  }
+
+  &_file_icon{
+    width: 32px;
+    height: 32px;
   }
 }
