--- a/micapp/pages/report/index.wxml
+++ b/micapp/pages/report/index.wxml
@@ -1,14 +1,14 @@
 <!--pages/report/index.wxml-->
 <view>
-  <van-tabs active="{{ active }}" bind:change="onChange" color="#116BB4">
+  <van-tabs active="{{ active }}" bind:change="tabChange" color="#116BB4">
     <van-tab title="就诊记录">
-      <view class="record_list panel">
+      <view class="record_list panel" wx:for="{{recordList}}" wx:key="id" bind:tap="gotoDetail" data-id="{{item.id}}">
         <view class="record_list_header">
           <view class="record_list_header_orderno">
-            订单编号：12312312
+            订单编号：{{item.queueNum}}
           </view>
           <view class="record_list_header_status">
-            已取号
+            {{item.statusStr}}
           </view>
         </view>
         <view class="record_list_doctor">
@@ -16,49 +16,61 @@
             <van-image width="100" height="100" src="https://img.yzcdn.cn/vant/cat.jpeg" fit="cover" />
           </view>
           <view class="record_list_doctor_info">
-            <view class="record_list_doctor_info_name">渣男</view>
-            <view class="record_list_doctor_info_hospital">曙光男科</view>
+            <view class="record_list_doctor_info_name">{{item.doctorName}}</view>
+            <view class="record_list_doctor_info_hospital">{{item.hospitalName}}</view>
           </view>
         </view>
         <view class="record_list_detail">
           <view class="record_list_detail_patient">
-            <view>就诊人：隔壁老王</view>
-            <view>就诊时间：2023-02-01 19:41:50</view>
-            <view>就诊项目：慢性疼痛评估</view>
+            <view>健康卡：{{item.patientName}}</view>
+            <view wx:if="{{item.status == 'M_Q_S_IN_PROGRESS' || item.status == 'M_Q_S_COMPLETED'}}">
+              康复时间：{{item.diagnosticTime}}
+            </view>
+            <view>康复项目：{{item.checkItemStr}}</view>
           </view>
           <view class="record_list_detail_tips">
-            <view class="record_list_detail_tips_link">查看详情</view>
+            <view class="record_list_detail_tips_num" wx:if="{{item.status == 'M_Q_S_QUEUING'}}">
+              {{item.currentNum}}
+            </view>
           </view>
         </view>
-      </view>
-      <view class="record_list panel">
-        ss
       </view>
     </van-tab>
     <van-tab title="就诊报告">
-      <view class="report_list panel">
+      <view class="report_list panel" wx:for="{{reportList}}" wx:key="id">
         <view class="report_list_patient">
           <view class="report_list_patient_header">
             <view class="report_list_patient_header_icon">
-              <van-image width="24px" height="24px" fit="contain" src="/images/nanren.png" />
+              <van-image wx:if="{{item.patientGender == 1}}" width="24px" height="24px" fit="contain" src="/images/nanren.png" />
+              <van-image wx:else width="24px" height="24px" fit="contain" src="/images/nvren.png" />
             </view>
-            <view class="report_list_patient_header_name">张三</view>
-            <view class="report_list_patient_header_relation">本人</view>
-            <view class="report_list_patient_header_illness">病情：术后恢复</view>
+            <view class="report_list_patient_header_name">{{item.patientName}}</view>
+            <view class="report_list_patient_header_relation">{{item.patientRelationStr}}</view>
+            <view class="report_list_patient_header_illness">病情：{{item.checkItemStr}}</view>
             <view class="report_list_patient_header_gender">
-              <van-image width="20px" height="20px" fit="contain" src="/images/nanrenicon.png" />
+              <van-image wx:if="{{item.patientGender == 1}}" width="20px" height="20px" fit="contain" src="/images/nanrenicon.svg" />
+              <van-image wx:else width="20px" height="20px" fit="contain" src="/images/nanrenicon.svg" />
             </view>
           </view>
           <view class="report_list_patient_info">
-            <view>就诊医院：曙光医院</view>
-            <view>就诊时间：2023-02-01 19:41:50</view>
+            <view>就诊医院：{{item.hospitalName}}</view>
+            <view>就诊时间：{{item.diagnosticTime}}</view>
           </view>
         </view>
-        <van-grid column-num="2" border="{{false}}">
-  <van-grid-item icon="photo-o" text="诊断报告" />
-  <van-grid-item icon="photo-o" text="评估报告" />
- 
-</van-grid>
+        <van-grid column-num="3" border="{{false}}">
+          <van-grid-item use-slot wx:if="{{item.record}}">
+            <image class="report_list_file_icon" src="../../images/record.svg" />
+            <text>就诊报告</text>
+          </van-grid-item>
+          <van-grid-item use-slot wx:if="{{item.report}}">
+            <image class="report_list_file_icon" src="../../images/report.svg" />
+            <text>评估报告</text>
+          </van-grid-item>
+          <van-grid-item use-slot wx:if="{{item.video}}">
+            <image class="report_list_file_icon" src="../../images/video.svg" />
+            <text>运动视频</text>
+          </van-grid-item>
+        </van-grid>
       </view>
     </van-tab>
     <van-tab title="运动视频">内容 3</van-tab>
