--- a/micapp/app.scss
+++ b/micapp/app.scss
@@ -4,19 +4,19 @@
   flex-direction: column;
   gap: 10px;
   display: flex;
-} 
+}
 
 .van-button--primary {
   font-size: 20px;
   background-color: pink;
 }
 
-page{
+page {
   background-color: #F8F8F8;
   font-size: 14px;
   --button-primary-background-color: #116BB4;
-  --button-primary-border-color:#116BB4;
-  --button-border-radius:8px;
+  --button-primary-border-color: #116BB4;
+  --button-border-radius: 8px;
 }
 
 .panel {
@@ -29,19 +29,29 @@ page{
   box-sizing: border-box;
 
   &_header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
     &_title {
       color: #4F4F4F;
       font-size: 16px;
       font-weight: bold;
+      flex: 1;
     }
 
-    &:not(:last-child){
+    &_link {
+      font-size: 12px;
+      color: #ABABAB;
+    }
+
+    &:not(:last-child) {
       padding-bottom: 5px;
       margin-bottom: 5px;
     }
   }
-  
- 
+
+
   .split {
     border-bottom: 1px solid #ebedf0;
   }
