--- a/micapp/pages/home/index.wxml
+++ b/micapp/pages/home/index.wxml
@@ -1,46 +1,51 @@
 <!--pages/home/index.wxml-->
 <view>
-  <van-notice-bar left-icon="volume-o" text="在代码阅读过程中人们说脏话的频率是衡量代码质量的唯一标准。" color="#545454" background="rgb(69, 170, 66, 0.2)" />
-  <view class="user_list panel">
-    <view class="panel_header">
-      <view class="panel_header_title">常用健康卡</view>
-    </view>
-    <view class="user_list_body">
-      <view class="user_list_body_item" wx:for="{{patientList}}" wx:key="id">
-        <view class="user_list_body_item_header">
-          <van-image width="24px" height="24px" fit="contain" src="{{item.gender === 1 ? '/images/nanren.png' : '/images/nvren.png'}}" />
+  <van-skeleton title avatar row="3" loading="{{ loading }}">
+    <van-notice-bar left-icon="volume-o" text="在代码阅读过程中人们说脏话的频率是衡量代码质量的唯一标准。" color="#545454" background="rgb(69, 170, 66, 0.2)" />
+    <view class="user_list">
+      <view class="user_list_header">
+        <view class="user_list_header_title">常用健康卡</view>
+      </view>
+      <view class="user_list_body">
+        <view class="user_list_body_item" wx:for="{{patientList}}" wx:key="id">
+          <view class="user_list_body_item_header">
+            <van-image width="41px" height="41px" fit="contain" src="{{item.gender === 1 ? '/images/nanren.png' : '/images/nvren.png'}}" />
+          </view>
+          <view class="user_list_body_item_name">{{item.name}}</view>
+          <view class="user_list_body_item_gender tag">
+            <text wx:if="{{item.gender === 1}}">男</text>
+            <text wx:else="">女</text>
+          </view>
+          <view class="user_list_body_item_relation tag">{{item.relationStr}}</view>
+          <view class="user_list_body_item_edit">
+            <van-image width="20px" height="20px" fit="contain" src="/images/bianji.svg" />
+          </view>
         </view>
-        <view class="user_list_body_item_name">{{item.name}}</view>
-        <view class="user_list_body_item_relation">{{item.relationStr}}</view>
-        <view class="user_list_body_item_icon {{item.gender === 1 ? 'man' : 'women'}}">
-          <van-image width="20px" height="20px" fit="contain" src="{{item.gender === 1 ? '/images/nanrenicon.svg' : '/images/nvrenicon.svg'}}" />
+        <view wx:if="{{patientList.size() < 6}}" class="user_list_body_item add_btn" bind:tap="gotoAddPatient">
+          <van-image width="17px" height="17px" fit="contain" src="/images/add_user.svg" />
+          <text>添加常用健康卡</text>
         </view>
       </view>
-      <view class="user_list_body_item add_btn" bindtap="gotoAddPatient">
-        <van-icon name="plus" />
-        <text>添加</text>
-      </view>
     </view>
-  </view>
 
-  <view class="hospital_list">
-    <view class="hospital_list_header">
-      <view class="hospital_list_header_title">合作医疗机构</view>
-    </view>
-  </view>
-  <van-cell-group inset>
-    <van-cell title-class="hospital_list_body_item" wx:for="{{hospitals}}" wx:key="id">
-      <view class="hospital_list_body_item" slot="title">
-        <view class="hospital_list_body_item_image">
-          图片
-        </view>
-        <view class="hospital_list_body_item_info">
-          <view class="hospital_list_body_item_info_name">{{item.name}}</view>
-          <view class="hospital_list_body_item_info_descriptions">{{item.descriptions || ""}}</view>
-          <view class="hospital_list_body_item_info_address">{{item.address}}</view>
-        </view>
+    <view class="hospital_list">
+      <view class="hospital_list_header">
+        <view class="hospital_list_header_title">合作医疗机构</view>
       </view>
-    </van-cell>
-  </van-cell-group>
-
+    </view>
+    <van-cell-group inset>
+      <van-cell title-class="hospital_list_body_item" wx:for="{{hospitals}}" wx:key="id">
+        <view class="hospital_list_body_item" slot="title">
+          <view class="hospital_list_body_item_image">
+            图片
+          </view>
+          <view class="hospital_list_body_item_info">
+            <view class="hospital_list_body_item_info_name">{{item.name}}</view>
+            <view class="hospital_list_body_item_info_descriptions">{{item.descriptions || ""}}</view>
+            <view class="hospital_list_body_item_info_address">{{item.address}}</view>
+          </view>
+        </view>
+      </van-cell>
+    </van-cell-group>
+  </van-skeleton>
 </view>
