--- a/micapp/pages/my/index.wxml
+++ b/micapp/pages/my/index.wxml
@@ -1,86 +1,84 @@
 <!--pages/my/index.wxml-->
 <view>
-  <view class="login" wx:if="{{loginState}}">
-    <view class="header" >
+  <view class="login">
+    <view class="header">
       <view class="user_panel">
         <view class="user_panel_icon">
-          <view class="user_panel_icon_border">
-            <view class="user_panel_icon_image">
-            <van-image width="68px" height="68px" fit="contain" src="/images/default.png" />
+          <van-image width="60px" height="60px" fit="contain" src="/images/nanren.png" />
+        </view>
+        <view class="user_panel_info">
+          <view class="user_panel_info_name" wx:if="{{loginState}}">
+            <text>{{userInfo.nickname || userInfo.username || '未设置昵称'}}</text>
+          </view>
+          <view class="user_panel_info_phone" wx:if="{{loginState}}">
+            <text>绑定手机号：{{userInfo.phone || '未绑定手机号'}}</text>
+          </view>
+          <view class="user_panel_info_login" bind:tap="gotoLogin" wx:if="{{!loginState}}">
+            登录/注册
+          </view>
+        </view>
+        <view wx:if="{{loginState}}">
+          <van-image width="24px" height="24px" fit="contain" bind:tap="gotoSetting" src="/images/setting.svg" />
+        </view>
+      </view>
+    </view>
+      <view class="user_list">
+        <view class="user_list_header">
+          <view class="user_list_header_title">常用健康卡</view>
+          <image class="user_list_header_bg" src="/images/header_bg.png" />
+        </view>
+        <view class="user_list_body">
+          <view class="user_list_body_item" wx:for="{{patientList}}" wx:key="id">
+            <view class="user_list_body_item_header">
+              <van-image width="41px" height="41px" fit="contain" src="{{item.gender === 1 ? '/images/nanren.png' : '/images/nvren.png'}}" />
+            </view>
+            <view class="user_list_body_item_name">{{item.name}}</view>
+            <view class="user_list_body_item_gender tag">
+              <text wx:if="{{item.gender === 1}}">男</text>
+              <text wx:else="">女</text>
+            </view>
+            <view class="user_list_body_item_relation tag">{{item.relationStr}}</view>
+            <view class="user_list_body_item_edit">
+              <van-image width="20px" height="20px" fit="contain" src="/images/bianji.svg" />
+            </view>
+          </view>
+          <view wx:if="{{patientList.size() < 6}}" class="user_list_body_item add_btn" bind:tap="gotoAddPatient">
+            <van-image width="17px" height="17px" fit="contain" src="/images/add_user.svg" />
+            <text>添加常用健康卡</text>
+          </view>
+        </view>
+      </view>
+      <view class="tools_list panel">
+        <view class="panel_header">
+          <view class="panel_header_title">我的记录</view>
+        </view>
+        <view class="tools_list_body">
+          <view class="tools_list_body_item" bind:tap="gotoRecord">
+            <view class="tools_list_body_item_icon">
+              <image src="/images/record.png" />
+            </view>
+            <view class="tools_list_body_item_label">
+              康复记录
+            </view>
+          </view>
+          <view class="tools_list_body_item" bind:tap="gotoReport">
+            <view class="tools_list_body_item_icon">
+              <image src="/images/report.png" />
+            </view>
+            <view class="tools_list_body_item_label">
+              康复报告
+            </view>
+          </view>
+          <view class="tools_list_body_item" bind:tap="gotoVideo">
+            <view class="tools_list_body_item_icon">
+              <image src="/images/video.png" />
+            </view>
+            <view class="tools_list_body_item_label">
+              视频
             </view>
           </view>
         </view>
-        <view class="user_panel_info">
-          <view class="user_panel_info_name">
-            <text>{{userInfo.nickname || userInfo.username || '未设置昵称'}}</text>
-          </view>
-          <view class="user_panel_info_phone">
-            <text>绑定手机号：{{userInfo.phone || '未绑定手机号'}}</text>
-          </view>
-        </view>
-        <view>
-        <van-image width="24px" height="24px" fit="contain" src="/images/setting.svg" />
-        </view>
       </view>
-    </view>
-    <view class="user_list panel">
-      <view class="panel_header">
-        <view class="panel_header_title">常用健康卡</view>
-        <view class="panel_header_link" bind:tap="gotoPatientList">
-        更多
-        </view>
-      </view>
-      <view class="user_list_body">
-        <view class="user_list_body_item" wx:for="{{patientList}}" wx:key="id">
-          <view class="user_list_body_item_header">
-            <van-image width="24px" height="24px" fit="contain" src="{{item.gender === 1 ? '/images/nanren.png' : '/images/nvren.png'}}" />
-          </view>
-          <view class="user_list_body_item_name">{{item.name}}</view>
-          <view class="user_list_body_item_relation">{{item.relationStr}}</view>
-          <view class="user_list_body_item_icon {{item.gender === 1 ? 'man' : 'women'}}">
-            <van-image width="20px" height="20px" fit="contain" src="{{item.gender === 1 ? '/images/nanrenicon.svg' : '/images/nvrenicon.svg'}}" />
-          </view>
-        </view>
-        <view class="user_list_body_item add_btn" bind:tap="gotoAddPatient">
-          <van-icon name="plus" />
-          <text>添加</text>
-        </view>
-      </view>
-    </view>
-    <view class="tools_list panel">
-      <view class="panel_header">
-        <view class="panel_header_title">工具</view>
-      </view>
-      <view class="tools_list_body">
-        <view class="tools_list_body_item" bind:tap="gotoRecord">
-          <view class="tools_list_body_item_icon">
-            <image src="/images/record.svg"/>
-          </view>
-          <view class="tools_list_body_item_label">
-            记录
-          </view>
-        </view>
-        <view class="tools_list_body_item" bind:tap="gotoReport">
-          <view class="tools_list_body_item_icon">
-            <image src="/images/report.svg" />
-          </view>
-          <view class="tools_list_body_item_label">
-            报告
-          </view>
-        </view>
-        <view class="tools_list_body_item" bind:tap="gotoVideo">
-          <view class="tools_list_body_item_icon">
-          <image src="/images/video.svg" />
-          </view>
-          <view class="tools_list_body_item_label">
-            视频
-          </view>
-        </view>
-      </view>
-    </view>
-    <!-- <view class="notice_card">
-      <van-notice-bar left-icon="volume-o" text="在代码阅读过程中人们说脏话的频率是衡量代码质量的唯一标准。" background="#F5EDED" custom-class="notice_bar" />
-    </view> -->
 
   </view>
 </view>
