--- a/micapp/pages/my/index.wxml
+++ b/micapp/pages/my/index.wxml
@@ -42,7 +42,7 @@
               <van-image width="20px" height="20px" fit="contain" src="/images/bianji.svg" />
             </view>
           </view>
-          <view wx:if="{{patientList.size() < 6}}" class="user_list_body_item add_btn" bind:tap="gotoAddPatient">
+          <view wx:if="{{patientList.length < 6}}" class="user_list_body_item add_btn" bind:tap="gotoAddPatient">
             <van-image width="17px" height="17px" fit="contain" src="/images/add_user.svg" />
             <text>添加常用健康卡</text>
           </view>
